feat(service): Implementa lógicas de segurança, performance e deleção em cascata